--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 PORT=5000
 MONGODB_URI=mongodb://127.0.0.1:27017/interovert
 JWT_SECRET=replace_with_strong_secret
+FRONTEND_URL=http://localhost:5173
 
 # PostgreSQL (for /api/community module)
 PG_HOST=127.0.0.1
