feat: add resend mail part

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,6 +14,10 @@ PG_SSL=false
 EMAIL_USER=your_email@example.com
 EMAIL_PASS=your_email_app_password
 
+# Resend (recommended on Render – set these to send OTP emails)
+RESEND_API_KEY=re_xxxx
+EMAIL_FROM=Introvert <onboarding@resend.dev>
+
 GEMINI_API_KEY=your_gemini_key
 ASKY_API_KEY=your_asky_key
 ASKY_BASE_URL=https://api.asky.ai/v1
